<!--
  ~ Copyright (c) 2018 Tuomo Heino
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- Content Desc START -->
    <string name="music_preview_desc">Music Preview</string>
    <string name="favorite_desc">Favorite</string>
    <string name="previous_desc">Previous</string>
    <string name="playback_mode_desc">Playback Mode</string>
    <string name="play_pause_desc">Play/Pause</string>
    <string name="stop_desc">Stop</string>
    <string name="next_desc">Next</string>
    <string name="download_desc">Download song</string>
    <string name="shutdown_desc">Shutdown Player</string>
    <string name="add_to_playlist_desc">Add to Playlist</string>
    <string name="song_more_desc">More</string>
    <!-- Content Desc END -->

    <string name="app_name">Homefy</string>
    <string name="app_desc">Play some music!</string>

    <string name="channel_name">Media playback</string>
    <string name="channel_desc">Media playback controls</string>

    <string name="library_music">Music</string>
    <string name="library_albums">Albums</string>
    <string name="library_artists">Artists</string>
    <string name="library_search">Search</string>
    <string name="library_favs">Favorites</string>
    <string name="library_playlists">Playlists</string>
    <string name="library_now_playing">Playing</string>
    <string name="library_search_hint">Search…..</string>

    <string name="library_song_track_title">%d - %s</string>
    <string name="library_song_artist_album">%s - %s</string>

    <string name="setup_enter_server_address">Address is missing!</string>
    <string name="setup_check_credentials_username">Enter username!</string>
    <string name="setup_check_credentials_password">Enter password!</string>
    <string name="setup_unsupported_authentication">Unsupported authentication!</string>
    <string name="setup_malformed_url">Invalid URL!</string>
    <string name="setup_connection_error">Connection error!</string>
    <string name="setup_authentication_error">Invalid Username or Password!</string>
    <string name="setup_http_hint" translatable="false">http://</string>
    <string name="setup_server_address_hint">Server address</string>
    <string name="setup_username_if_needed_hint">Username</string>
    <string name="setup_password_if_needed_hint">Password</string>
    <string name="setup_connect">Connect</string>
    <string name="setup_authenticate">Login</string>

    <string name="load_loading">Loading…</string>

    <string name="player_buffering">%03d%% Buffering</string>
    <string name="player_buffering_place_holder">100%% Buffering</string>

    <string name="menu_shutdown">Shutdown</string>
    <string name="menu_song_play_all">Play All</string>
    <string name="menu_song_queue">Queue</string>
    <string name="menu_song_add_to_playlist">Add to Playlist</string>
    <string name="menu_song_remove_from_playlist">Remove from Playlist</string>

    <string name="playlist_songs_format">Songs: %d</string>
    <string name="playlist_dialog_title">Add to Playlist</string>
    <string name="playlist_dialog_added">Song added!</string>
    <string name="playlist_dialog_removed">Song removed!</string>
    <string name="playlist_dialog_no_playlists">No suitable Playlists!</string>
    <string name="playlist_dialog_create">Create</string>
    <string name="playlist_dialog_create_title">New Playlist</string>

    <string name="library_album_and_song_count">%s - %s</string>

    <!-- Plurals -->
    <plurals name="song_count">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>

    <plurals name="album_count">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>

    <plurals name="songs_loaded">
        <item quantity="one">%1$d / %2$d Song loaded</item>
        <item quantity="other">%1$d / %2$d Songs loaded</item>
    </plurals>
</resources>
