<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Tuomo Heino
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navSongs"
        android:title="@string/library_music"
        android:icon="@drawable/ic_library_music" />

    <item
        android:id="@+id/navAlbums"
        android:title="@string/library_albums"
        android:icon="@drawable/ic_library_albums" />

    <item
        android:id="@+id/navArtists"
        android:title="@string/library_artists"
        android:icon="@drawable/ic_library_artists" />

    <item
        android:id="@+id/navPlaylists"
        android:title="@string/library_playlists"
        android:icon="@drawable/ic_library_playlists" />

    <item
        android:id="@+id/navNowPlaying"
        android:title="@string/library_now_playing"
        android:icon="@drawable/ic_library_playing" />

</menu>
